--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                     </div>
                 </div>
             </div>
+            <div class="text">    ‌‌‍‍</div>
+            <div class="text">    ‌‌‍‍</div>
+            <div class="text">    ‌‌‍‍</div>
         </div>
 
         <div class="side_menu_background" id="side_menu_background">
