--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="html">
     <head>
         <meta charset="utf-8">
         <title>Информация, её виды и свойства</title>
@@ -10,7 +10,7 @@
         <script src="https://kit.fontawesome.com/e1c9f69521.js" crossorigin="anonymous"></script>
     </head>
     <body id="body">
-        <header class="header">
+        <header class="header" id="sukablya">
             <a class="header_btn" href="index.html">Главная</a>
             <button id="hrs" onclick="openMenu()" class="header_nav">
                 <div>
@@ -690,7 +690,7 @@
             <div class="result_complete">Верных ответов: <span id="result_complete">0</span></div>
             <div class="result_failed">Неверных ответов: <span id="result_failed">0</span></div>
             <div class="result_buttons">
-                <button onclick="restartPage()" class="result_backtomain" id="result_backtomain">Вернутся на главное меню</button>
+                <button onclick="restartPage()" class="result_backtomain" id="result_backtomain">Главное меню</button>
                 <button onclick="tryagain()" class="result_tryagain" id="result_tryagain">Пройти снова</button>
             </div>
         </div>
