--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body id="body">
         <header class="header" id="sukablya">
-            <a class="header_btn" href="index.html">Главная</a>
+            <a class="header_btn" href="https://info-prop.github.io/">Главная</a>
             <button id="hrs" onclick="openMenu()" class="header_nav">
                 <div>
                     <hr class="header_nav_hr_first">
